--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  user-select: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  background-image: linear-gradient(gray,lightgray) ;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1{
+  color: rgb(59, 36, 36);
+  font-size: 50px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4{
+  color: rgb(59, 36, 36);
+  font-size: 35px;
+  margin-bottom: 40px;
+}
+
+a{
+  background-color: rgb(78, 83, 83);
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  padding: 15px;
+}
+
+span {
+  color: rgb(22, 22, 77);
+}
+
+input{
+  height: 45px;
+  width: 40px;
+  text-align: center;
 }
